ini: add generic environment

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,13 +10,14 @@
 
 # this platformio.ini file is primarily intended for building/running unit tests
 
-[env:native]
-platform = native
+[env]
 debug_test = *
 build_flags = -std=gnu++2b
 lib_ldf_mode = chain+
 test_build_src = true
 
+[env:native]
+platform = native
 
 [env:esp32dev]
 platform = espressif32@6.5.0
@@ -27,6 +28,3 @@ monitor_rts = 0
 monitor_dtr = 0
 monitor_filters = esp32_exception_decoder
 board_build.partitions = partitions_singleapp_large.csv
-lib_ldf_mode = chain+
-build_flags = -std=gnu++2b
-test_build_src = true
