--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ test_build_src = true
 
 [env:native]
 platform = native
+build_flags = ${env.build_flags} -DNATIVE_PLATFORM
 
 [env:esp32dev]
 platform = espressif32@6.5.0
