--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@ test_build_src = true
 
 [env:native]
 platform = native
-build_flags = ${env.build_flags} -DNATIVE_PLATFORM
+build_flags = ${env.build_flags} -DNATIVE_PLATFORM -fno-rtti
 
 [env:esp32dev]
 platform = espressif32@6.5.0
